Your awesome message

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://github.com/1653020/react_gomoku",
+    "homepage": "https:1653020.github.io/react_gomoku",
     "name": "my_app",
     "version": "0.1.0",
     "private": true,
